crates/eure-macros/tests/compile_fail/via_missing_type_tuple.rs
use eure::FromEure;

struct JumpAt;

#[derive(FromEure)]
struct Steps(usize, #[eure(via = "MissingProxy")] JumpAt);

fn main() {}
