crates/eure-macros/tests/compile_fail/via_missing_type_tuple.stderr
error[E0425]: cannot find type `MissingProxy` in this scope
 --> tests/compile_fail/via_missing_type_tuple.rs:6:34
  |
6 | struct Steps(usize, #[eure(via = "MissingProxy")] JumpAt);
  |                                  ^^^^^^^^^^^^^^ not found in this scope
